--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,10 @@ buildscript {
         minSdkVersion = 24
         compileSdkVersion = 35
         targetSdkVersion = 35
+        ndkVersion = "26.1.10909125"
         ndkVersion = "27.1.12297006"
+        ndkVersion = "28.0.13004108"
+        ndkVersion = "28.0.12916984"
         kotlinVersion = "2.1.20"
     }
     repositories {
